fix: layout issue

--- a/src/components/layout/MainLayout.scss
+++ b/src/components/layout/MainLayout.scss
@@ -9,14 +9,13 @@
     display: none;
     @include media-breakpoint-up(lg) {
       display: block;
-      min-width: 15rem;
-      width: calc(100% * 2/12);
+      width: 15rem;
+      flex: 0;
     }
   }
   .main-content-wrapper {
     @include media-breakpoint-up(lg) {
-      max-width: calc(100% - 15rem);
-      width: calc(100% * 10/12);
+      width: calc(100% - 15rem);
     }
   }
 }
